--- a/refer-javascript/javascriptRefer13.html
+++ b/refer-javascript/javascriptRefer13.html
@@ -45,17 +45,17 @@
         </ul>
         </nav>
         <h2 class="mt20">알고리즘</h2>
-        <ul class="list">
-            <li><a href="#sample01">01. 1부터 100까지 출력하기</a></li>
-            <li><a href="#sample02">02. 1부터 100까지 : 짝수만</a></li>
-            <li><a href="#sample03">03. 1부터 100까지 : 5의 배수만</a></li>
-            <li><a href="#sample04">04. 1부터 100까지 : 짝수는 빨간색, 홀수는 파란색 </a></li>
-            <li><a href="#sample05">05. 1부터 100까지의 합</a></li>
-            <li><a href="#sample06">06. 구구단 출력하기</a></li>
-            <li><a href="#sample07">07. 테이블 만들기 1</a></li>
-            <li><a href="#sample08">08. 테이블 만들기 2</a></li>
-            <li><a href="#sample09">09. 테이블 만들기 3 - 짝수만</a></li>
-        </ul>
+        <ol class="list">
+            <li><a href="#sample01">1부터 100까지 출력하기</a></li>
+            <li><a href="#sample02">1부터 100까지 : 짝수만</a></li>
+            <li><a href="#sample03">1부터 100까지 : 5의 배수만</a></li>
+            <li><a href="#sample04">1부터 100까지 : 짝수는 빨간색, 홀수는 파란색 </a></li>
+            <li><a href="#sample05">1부터 100까지의 합</a></li>
+            <li><a href="#sample06">구구단 출력하기</a></li>
+            <li><a href="#sample07">테이블 만들기 1</a></li>
+            <li><a href="#sample08">테이블 만들기 2</a></li>
+            <li><a href="#sample09">테이블 만들기 3 - 짝수만</a></li>
+        </ol>
 
     <hr>
 
