--- a/refer-javascript/javascriptRefer02.html
+++ b/refer-javascript/javascriptRefer02.html
@@ -45,30 +45,30 @@
         </ul>
     </nav>
         <h2 class="mt20">데이터 불러오기</h2>
-        <ul class="list">
-            <li><a href="#sample01">01. 변수 : 데이터 불러오기 : 기본</a></li>
-            <li><a href="#sample02">02. 상수 : 데이터 불러오기 : 기본</a></li>
-            <li><a href="#sample03">03. 배열 : 데이터 불러오기 : 기본</a></li>
-            <li><a href="#sample04">04. 배열 : 데이터 불러오기 : 2차 배열</a></li>
-            <li><a href="#sample05">05. 배열 : 데이터 불러오기 : 갯수 구하기</a></li>
-            <li><a href="#sample06">06. 배열 : 데이터 불러오기 : for문</a></li>
-            <li><a href="#sample07">07. 배열 : 데이터 불러오기 : forEach()문</a></li>
-            <li><a href="#sample08">08. 배열 : 데이터 불러오기 : for of문</a></li>
-            <li><a href="#sample09">09. 배열 : 데이터 불러오기 : for in문</a></li>
-            <li><a href="#sample10">10. 배열 : 데이터 불러오기 : map()</a></li>
-            <li><a href="#sample10">11. 배열 : 데이터 불러오기 : 펼침 연산자</a></li>
-            <li><a href="#sample10">12. 객체 : 데이터 불러오기 : 기본</a></li>
-            <li><a href="#sample10">13. 객체 : 데이터 불러오기 : Object</a></li>
-            <li><a href="#sample10">14. 객체 : 데이터 불러오기 : 변수</a></li>
-            <li><a href="#sample10">15. 객체 : 데이터 불러오기 : for in문</a></li>
-            <li><a href="#sample10">16. 객체 : 데이터 불러오기 : map()</a></li>
-            <li><a href="#sample10">17. 객체 : 데이터 불러오기 : hasOwnProperty()</a></li>
-            <li><a href="#sample10">18. 객체 : 데이터 불러오기 : 펼침 연산자 - 복사</a></li>
-            <li><a href="#sample10">19. 객체 : 데이터 불러오기 : 펼침 연산자 - 추가</a></li>
-            <li><a href="#sample10">20. 객체 : 데이터 불러오기 : 펼침 연산자 - 결합</a></li>
-            <li><a href="#sample10">21. 객체 : 데이터 불러오기 : 비구조화 할당</a></li>
-            <li><a href="#sample10">22. 객체 : 데이터 불러오기 : 비구조화 할당 : 별도 이름 저장</a></li>
-        </ul>
+        <ol class="list">
+            <li><a href="#sample01">변수 : 데이터 불러오기 : 기본</a></li>
+            <li><a href="#sample02">상수 : 데이터 불러오기 : 기본</a></li>
+            <li><a href="#sample03">배열 : 데이터 불러오기 : 기본</a></li>
+            <li><a href="#sample04">배열 : 데이터 불러오기 : 2차 배열</a></li>
+            <li><a href="#sample05">배열 : 데이터 불러오기 : 갯수 구하기</a></li>
+            <li><a href="#sample06">배열 : 데이터 불러오기 : for문</a></li>
+            <li><a href="#sample07">배열 : 데이터 불러오기 : forEach()문</a></li>
+            <li><a href="#sample08">배열 : 데이터 불러오기 : for of문</a></li>
+            <li><a href="#sample09">배열 : 데이터 불러오기 : for in문</a></li>
+            <li><a href="#sample10">배열 : 데이터 불러오기 : map()</a></li>
+            <li><a href="#sample10">배열 : 데이터 불러오기 : 펼침 연산자</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 기본</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : Object</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 변수</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : for in문</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : map()</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : hasOwnProperty()</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 펼침 연산자 - 복사</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 펼침 연산자 - 추가</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 펼침 연산자 - 결합</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 비구조화 할당</a></li>
+            <li><a href="#sample10">객체 : 데이터 불러오기 : 비구조화 할당 : 별도 이름 저장</a></li>
+        </ol>
 
     <hr>
 
