--- a/site/index.html
+++ b/site/index.html
@@ -101,6 +101,13 @@
                 </div>
                 <!-- //Intro3 -->
 
+                 <!-- Intro4 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">슬라이더 유형</h2>
+                    <p>코드 보기 <a href="sliderType.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
                
         
             </div>
@@ -114,6 +121,7 @@
                         <li><a href="#intro1">카드 유형</a></li>
                         <li><a href="#intro2">이미지 유형</a></li>
                         <li><a href="#intro3">오버이펙트 유형</a></li>
+                        <li><a href="#intro4">슬라이더 유형</a></li>
                     </ul>
                 </div>
             </div>
