--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -120,7 +120,7 @@ owners.
 Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 </code></pre>
 <div class="bs-callout bs-callout-info">
-    맥 : cd /Application/mamp/Library/bin
+    맥 : cd /Application/mamp/Library/bin<br>
     맥 : sudo mysql -uroot -proot
  </div>
 <pre class="language-js"><code>webstoryboyhwang@Webstoryboyui-MacBookPro bin % sudo ./mysql -uroot -p
