--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -101,7 +101,7 @@
                     <h2 id="intro2" class="page-header">MySQL 설치</h2>
 
                     <h3>MAMP 설치</h3>
-                    <img src="http://silvery92.dothome.co.kr/mySQL/img/mysql.png" alt="">
+                    <img src="img/install.jpg" alt="">
 
                     <h3 class="pt30">MAMP 실행</h3>
                     <div class="bs-callout bs-callout-info">
