--- a/refer-javascript/javascriptRefer13.html
+++ b/refer-javascript/javascriptRefer13.html
@@ -15,13 +15,13 @@
 </head>
 
 <body>
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+    <h1><a href="index.html">Javascript Reference</a></h1>
 
-    <ul class="page">
+    <!-- <ul class="page">
         <li><a href="/refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
         <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li>     
-    </ul>
+    </ul> -->
     <nav class="menu">
         <ul>
             <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
@@ -44,6 +44,9 @@
             <li><a href="javascriptRefer13.html">알고리즘</a></li>
         </ul>
         </nav>
+
+        <hr>
+
         <h2 class="mt20">알고리즘</h2>
         <ol class="list">
             <li><a href="#sample01">1부터 100까지 출력하기</a></li>
