--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -168,12 +168,12 @@
 </head>
 
 <body>
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
-    <ul class="page">
+    <h1><a href="index.html">Javascript Reference</a></h1>
+    <!-- <ul class="page">
         <li><a href="/refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
         <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li> 
-    </ul>
+    </ul> -->
     <nav class="menu">
         <ul>
             <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
@@ -196,6 +196,8 @@
             <li><a href="javascriptRefer13.html">알고리즘</a></li>
         </ul>
     </nav>
+
+    <hr>
 
     <h2 class="mt20">요소 객체</h2>
     <ol class="list">
