--- a/refer-javascript/javascriptRefer09.html
+++ b/refer-javascript/javascriptRefer09.html
@@ -39,7 +39,7 @@
         }
 
         h1 {
-            padding-top: 40px;
+            padding-top: 20px;
             padding-bottom: 20px;
         }
         h1 a {
@@ -311,13 +311,13 @@
 </head>
 
 <body>
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+    <h1><a href="index.html">Javascript Reference</a></h1>
 
-    <ul class="page">
+    <!-- <ul class="page">
         <li><a href="/refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
         <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li>   
-    </ul>
+    </ul> -->
     <nav class="menu">
         <ul>
             <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
@@ -340,6 +340,9 @@
             <li><a href="javascriptRefer13.html">알고리즘</a></li>
         </ul>
     </nav>
+
+    <hr>
+
     <h2 class="mt20">브라우저 객체</h2>
     <div class="list">
         <ol>
