--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -246,7 +246,7 @@
                     </tr>
                     <tr>
                         <td>animation</td>
-                        <td></td>
+                        <td>animation 속성은 애니메이션을 정의합니다.</td>
                     </tr>
                     <tr>
                         <td>animation-delay</td>
@@ -470,7 +470,7 @@
                     </tr>
                     <tr>
                         <td>box-shadow</td>
-                        <td></td>
+                        <td>box-shadow 속성은 박스 요소의 그림자를 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>box-sizing</td>
@@ -774,19 +774,19 @@
                     </tr>
                     <tr>
                         <td>max-height</td>
-                        <td></td>
+                        <td>max-height 속성은 요소의 최대 세로값을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>max-width </td>
-                        <td></td>
+                        <td>max-width 속성은 요소의 최대 가로값을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>min-height</td>
-                        <td></td>
+                        <td>min-height 속성은 요소의 최소 세로값을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>min-width</td>
-                        <td></td>
+                        <td>min-width 속성은 요소의 최소 가로값을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>mix-blend-mode</td>
@@ -802,7 +802,7 @@
                     </tr>
                     <tr>
                         <td>opacity</td>
-                        <td></td>
+                        <td>opacity 속성은 요소의 투명도를 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>order</td>
