--- a/refer-javascript/javascriptRefer01.html
+++ b/refer-javascript/javascriptRefer01.html
@@ -694,7 +694,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
     <script>
-        //결과보기
+        //결과보기 제이쿼리 변경
         document.querySelectorAll(".box h3").forEach(el => {
             el.addEventListener("click", function(e){
                 e.preventDefault();
