--- a/site/sliderType.html
+++ b/site/sliderType.html
@@ -6,12 +6,193 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SliderType</title>
+    <style>
+        .swiper {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .swiper3 {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .swiper4 {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .swiper-wrapper .swiper-slide:nth-child(1) {
+            background-image: url(img/slider1.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 100%;
+        }
+
+        .swiper-wrapper .swiper-slide:nth-child(2) {
+            background-image: url(img/slider2.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 100%;
+        }
+
+        .swiper-wrapper .swiper-slide:nth-child(3) {
+            background-image: url(img/slider3.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 100%;
+        }
+
+        .swiper-wrapper .swiper-slide:nth-child(4) {
+            background-image: url(img/slider1.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 100%;
+        }
+
+        .swiper-wrapper .swiper-slide:nth-child(5) {
+            background-image: url(img/slider2.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 100%;
+        }
+
+        .swiper-wrapper .swiper-slide:nth-child(6) {
+            background-image: url(img/slider3.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 100%;
+        }
+
+        .swiper-slide .slider-inner {
+            color: #fff;
+            width: 1400px;
+            margin: 0 auto;
+        }
+
+        .swiper-slide .slider-inner em {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            font-size: 24px;
+            font-weight: 700;
+            padding-top: 100px;
+            display: block;
+        }
+
+        .swiper-slide .slider-inner h3 {
+            font-weight: 300;
+            font-size: 100px;
+            line-height: 1.2;
+            text-indent: -8px;
+        }
+
+        .swiper-slide .slider-inner p {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            font-size: 20px;
+            font-weight: 300;
+        }
+
+        .swiper-slide .slider-inner .btn {
+            display: block;
+            margin-top: 260px;
+            padding-bottom: 100px;
+        }
+
+        .swiper-slide .slider-inner .btn a {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            font-size: 16px;
+            width: 200px;
+            height: 50px;
+            display: inline-block;
+            text-align: center;
+            line-height: 50px;
+            margin-right: 7px;
+        }
+
+        .swiper-slide .slider-inner .btn a.white {
+            background: #fff;
+            color: #000;
+        }
+
+        .swiper-slide .slider-inner .btn a.black {
+            background: #000;
+            color: #fff;
+        }
+
+        .swiper-pagination {
+            position: absolute;
+            /* left: 50% !important; */
+            bottom: 35px;
+            transform: translateX(-50%);
+        }
+
+
+       .swiper-pagination .swiper-pagination-bullet {
+            width: 15px;
+            height: 15px;
+            border: 3px solid #fff;
+            border-radius: 50%;
+            display: inline-block;
+            margin: 0 6px;
+            box-sizing: border-box;
+            opacity: 1;
+            background-color: transparent;
+        }
+
+        .swiper-pagination .swiper-pagination-bullet-active {
+            background-color: #fff;
+        }
+
+        .swiper-button-prev {
+            width: 21px;
+            height: 41px;
+            position: absolute;
+            display: block;
+            top: 50%;
+            left: 25px !important;
+            transform: translateY(-50%);
+            color: #fff !important;
+        }
+
+        .swiper-button-next {
+            width: 21px;
+            height: 41px;
+            position: absolute;
+            display: block;
+            top: 50%;
+            right: 25px !important;
+            transform: translateY(-50%);
+            color: #fff !important;
+        }
+
+        .swiper2 {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .swiper-pagination-fraction {
+            color: #fff;
+            font-size: 18px;
+        }
+    </style>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sliderType.css">
+
+    <!-- swiper CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -20,7 +201,7 @@
     <!-- sliderType01 -->
     <section class="sliderType">
         <div class="sliderType01">
-            <div class="slider">
+            <!-- <div class="slider">
                 <div class="slider-inner">
                     <em>GENESIS</em>
                     <h3>G80 SPORT</h3>
@@ -51,10 +232,266 @@
                 </div>
             </div>
             <div class="slider"></div>
-            <div class="slider"></div>
-        </div>
+            <div class="slider"></div> -->
+
+
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80 SPORT</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>GV70</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
     </section>
     <!-- sliderType01 -->
+
+    <!-- sliderType02 -->
+    <section class="sliderType">
+        <div class="sliderType02">
+            <div class="swiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80 SPORT</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>GV70</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+    </section>
+    <!-- sliderType02 -->
+
+     <!-- sliderType03 -->
+     <section class="sliderType">
+        <div class="sliderType03">
+            <div class="swiper3">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80 SPORT</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>GV70</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+    </section>
+    <!-- sliderType03 -->
+
+      <!-- sliderType04 -->
+      <section class="sliderType">
+        <div class="sliderType04">
+            <div class="swiper4">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80 SPORT</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>G80</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-inner">
+                            <em>GENESIS</em>
+                            <h3>GV70</h3>
+                            <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                            <span class="btn">
+                                <a href="#" class="white">자세히 보기</a>
+                                <a href="#" class="black">견적 내기</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+    </section>
+    <!-- sliderType04 -->
+
+
+
+
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', { //객체 생성자 함수
+            direction: 'horizontal',
+            //  loop: true,
+
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+
+        const swiper2 = new Swiper('.swiper2', { //객체 생성자 함수
+            direction: 'horizontal',
+            //  loop: true,
+
+            pagination: {
+                el: '.swiper-pagination',
+                type: "fraction",
+            },
+
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+
+        const swiper3 = new Swiper('.swiper3', { //객체 생성자 함수
+            direction: 'horizontal',
+            loop: true,
+            autoplay: {
+            delay: 3000,
+            },
+
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+
+        const swiper4 = new Swiper('.swiper4', { //객체 생성자 함수
+            direction: 'horizontal',
+            loop: true,
+            autoplay: {
+            delay: 4000,
+            },
+            effect: 'fade',
+            fadeEffect: {
+                crossFade: true
+            },
+
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+    </script>
 </body>
 
 </html>
