--- a/refer-jquery/jqueryRefer04.html
+++ b/refer-jquery/jqueryRefer04.html
@@ -38,28 +38,145 @@
         <table>
             <caption>기본 선택자</caption>
             <colgroup>
-                <col style ="width: 4%;"/>
+                <col style ="width: 8%;"/>
                 <col style ="width: 20%;"/>
                 <col style ="width: 20%;"/>
                 <col style ="width: 20%;"/>
-                <col style ="width: 36%;"/>
+                <col />
             </colgroup>
             <thead>
                 <tr>
-                    <th class="center">번호</th>
-                    <th>종류</th>
-                    <th>jQuery</th>
-                    <th>javascript</th>
+                    <th class="center">종류</th>
+                    <th>제이쿼리</th>
+                    <th>예시</th>
+                    <th>자바스크립트</th>
                     <th>설명</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="center" rowspan="5"><a href="#sample01">1</a></td>
-                    <td>태그 선택자</td>
-                    <td>$("li")</td>
-                    <td>querySelector("li")</td>
-                    <td>기본 태그를 선택합니다.</td>
+                    <td class="center" rowspan="1">카피</td>
+                    <td>.clone</td>
+                    <td>$("selector").clone</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="13">추가</td>
+                    <td>.wrap</td>
+                    <td>$("selector").wrap</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.wrapAll</td>
+                    <td>$("selector").wrapAll</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.wrapInner</td>
+                    <td>$("selector").wrapInner</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.append() **</td>
+                    <td>$("selector").append()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.appendTo() **</td>
+                    <td>$("selector").appendTo()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.prepend() **</td>
+                    <td>$("selector").prepend()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.prependTo() **</td>
+                    <td>$("selector").prependTo()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.after()</td>
+                    <td>$("selector").after()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.before()</td>
+                    <td>$("selector").before()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.insertAfter()</td>
+                    <td>$("selector").insertAfter()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.insertBefore()</td>
+                    <td>$("selector").insertBefore()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.html() *</td>
+                    <td>$("selector").html()</td>
+                    <td>innerHTML</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.text() **</td>
+                    <td>$("selector").text()</td>
+                    <td>innerTEXT</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="4">삭제</td>
+                    <td>.datach()</td>
+                    <td>$("selector").datach()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.empty()</td>
+                    <td>$("selector").empty()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.remove() * </td>
+                    <td>$("selector").remove()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.unwrap()</td>
+                    <td>$("selector").unwrap()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="2">대체</td>
+                    <td>.replaceAll()</td>
+                    <td>$("selector").replaceAll()</td>
+                    <td>-</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>.replaceWidth()</td>
+                    <td>$("selector").replaceWidth()</td>
+                    <td>-</td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
