--- a/refer-effect/index.html
+++ b/refer-effect/index.html
@@ -10,6 +10,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+    <style>
+        @media (max-width: 800px) {
+            #contents h1 {
+                font-size: 20vw;
+            }
+
+            #nav ul {
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+            }
+
+            #nav li a {
+                margin: 5px;
+                font-size: 12px;
+                width: 60px;
+                height: 35px;
+                line-height: 35px;
+            }
+        }
+    </style>
 </head>
 
 <body id="main">
@@ -28,7 +49,7 @@
             <li><a href="gameEffect/index.html">Game</a></li>
         </ul>
     </nav>
-    
+
     <script src="assets/js/three.min.js"></script>
     <script src="assets/js/gradient.js"></script>
     <script>
