--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -109,11 +109,11 @@
                 </div>
                 <div>
                     <h2>CSS</h2>
-                    <p>김우석</p>
+                    <p>캐스케이딩 스타일 시트는 마크업 언어가 실제 표시되는 방법을 기술하는 스타일 언어로, HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. </p>
                 </div>
                 <div>
                     <h2>Javascript</h2>
-                    <p>김우석</p>
+                    <p>자바스크립트는 객체 기반의 스크립트 프로그래밍 언어이다. 이 언어는 웹 브라우저 내에서 주로 사용하며, 다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능을 가지고 있다.</p>
                 </div>
                 <div>
                     <h2>Jquery</h2>
@@ -121,7 +121,7 @@
                 </div>
                 <div>
                     <h2>SCSS</h2>
-                    <p>김우석</p>
+                    <p>Sass(Syntactically Awesome Style Sheets)의 3버전에서 새롭게 등장한 SCSS는 CSS 구문과 완전히 호환되도록 새로운 구문을 도입해 만든 Sass의 모든 기능을 지원하는 CSS의 상위집합(Superset) 입니다.</p>
                 </div>
             </div>
         </div>
