--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -87,7 +87,7 @@
     </style>
 </head>
 
-<body class="bg bg11">
+<body class="bg bg11 chrome">
 
     <!-- contents -->
     <main>
@@ -305,6 +305,14 @@ tabBtn.forEach((element, index) => {
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
+         window.onload = function () {
+            // init();
+            // animate();
+            agentCheck();
+        }
+
+
+
         const tabBtn = document.querySelectorAll(".tab-btn ul li")
         const tabCont = document.querySelectorAll(".tab-cont > div")
 
