--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -316,8 +316,8 @@ Query OK, 0 rows affected (0.04 sec)
 
             <!-- //col-md-9 -->
 
-            <!-- //col-md-3 -->
-            <div class="col-md-3">
+             <!-- //col-md-3 -->
+             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">MySQL</a></li>
@@ -325,34 +325,34 @@ Query OK, 0 rows affected (0.04 sec)
                         <li><a href="#intro3">데이터베이스</a>
                             <ul class="nav bs-sidenav">
                                 <li><a href="#intro3-1">데이터베이스 만들기</a></li>
-                                <li><a href="#intro3-1">데이터베이스 보기</a></li>
-                                <li><a href="#intro3-1">데이터베이스 사용</a></li>
-                                <li><a href="#intro3-1">데이터베이스 삭제</a></li>
+                                <li><a href="#intro3-2">데이터베이스 보기</a></li>
+                                <li><a href="#intro3-3">데이터베이스 사용</a></li>
+                                <li><a href="#intro3-4">데이터베이스 삭제</a></li>
                             </ul>
                         </li>
                         <li><a href="#intro4">테이블</a>
                             <ul class="nav bs-sidenav">
                                 <li><a href="#intro4-1">테이블 만들기</a></li>
-                                <li><a href="#intro4-2">테이블 전체보기</a></li>
+                                <li><a href="#intro4-2">테이블 전체 보기</a></li>
                                 <li><a href="#intro4-3">테이블 보기</a></li>
                                 <li><a href="#intro4-4">테이블 삭제</a></li>
-                            </ul>    
-                        </li>  
+                            </ul>
+                        </li>
                         <li><a href="#intro5">테이블 수정</a>
                             <ul class="nav bs-sidenav">
-                                <li><a href="#intro5-1">필드 추가하기</a></li>
-                                <li><a href="#intro5-2">필드 수정하기</a></li>
-                                <li><a href="#intro5-3">필드 삭제하기</a></li>
-                            </ul>    
+                                <li><a href="#intro5-1">필드 추가</a></li>
+                                <li><a href="#intro5-2">필드 수정</a></li>
+                                <li><a href="#intro5-3">필드 삭제</a></li>
+                            </ul>
                         </li>
                         <li><a href="#intro6">테이블 데이터</a>
                             <ul class="nav bs-sidenav">
-                                <li><a href="#intro6-1">데이터 입력하기</a></li>
+                                <li><a href="#intro6-1">데이터 입력</a></li>
                                 <li><a href="#intro6-2">데이터 불러오기</a></li>
-                                <li><a href="#intro6-3">데이터 수정하기</a></li>
-                                <li><a href="#intro6-4">데이터 삭제하기</a></li>
-                            </ul>    
-                        </li>               
+                                <li><a href="#intro6-3">데이터 수정</a></li>
+                                <li><a href="#intro6-4">데이터 삭제</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
