--- a/site/sliderTest01.html
+++ b/site/sliderTest01.html
@@ -219,6 +219,9 @@
         }
 
         .swiper-button-next {
+            /* border: #000;
+            background: #000; */
+            border-radius: 50%;
             width: 21px;
             height: 41px;
             position: absolute;
