--- a/refer-effect/parallaxEffect/index.html
+++ b/refer-effect/parallaxEffect/index.html
@@ -21,7 +21,18 @@
 
     <nav id="nav">
         <ul>
-            <li><a href="#c">1</a></li>
+            <li><a href="javascriptPE01.html">1</a></li>
+            <li><a href="javascriptPE02.html">2</a></li>
+            <li><a href="javascriptPE03.html">3</a></li>
+            <li><a href="javascriptPE04.html">4</a></li>
+            <li><a href="javascriptPE05.html">5</a></li>
+        </ul>
+        <ul>
+            <li><a href="jquery01.html">1</a></li>
+            <li><a href="jquery02.html">2</a></li>
+            <li><a href="jquery03.html">3</a></li>
+            <li><a href="jquery04.html">4</a></li>
+            <li><a href="jquery05.html">5</a></li>
         </ul>
     </nav>
     
