--- a/refer-effect/parallaxEffect/jquery01.html
+++ b/refer-effect/parallaxEffect/jquery01.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Effect</title>
     <style>
-         @media(max-width : 800px){
+         @media(max-width : 900px){
             .paraInfo h1 a{
                 display: none;
             }
             .paraInfo p{
                 display: none;
+            }
+            .paraNav ul {
+                width: 100%;
             }
         }
     </style>
